fixing word wrap issues with longer filenames on small upload box.

--- a/www/manager/templates/css/forms.css
+++ b/www/manager/templates/css/forms.css
@@ -100,6 +100,7 @@ iframe * {margin:0px}
     background-color: RGBA(255,255,255,.75);
     display: block;
     cursor: pointer;
+    word-break: break-all;
 }
 
 .mh-upload-box.mh-upload-box-small {
